--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             <div class="navbar">
                 <div class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 16 15" fill="none">
-                        <path d="M15.2132 0.472778H0.867258C0.818545 0.472778 0.778992 0.512505 0.778992 0.561513V14.3604C0.778992 14.4094 0.818545 14.4491 0.867258 14.4491H15.2132C15.2619 14.4491 15.3012 14.4094 15.3012 14.3604V0.561513C15.3012 0.512505 15.2619 0.472778 15.2132 0.472778Z" fill="#545BE8"/>
-                        <path d="M4.61713 3.54858V11.3733" stroke="white" stroke-width="1.26926"/>
-                        <path d="M6.96182 3.54858V7.44616" stroke="white" stroke-width="1.26685"/>
-                        <path d="M8.74799 3.54883V4.8727H10.9854L12.6084 8.22643H14.0698L11.7488 3.54883H8.74799Z" fill="white"/>
-                        <path d="M9.41281 6.3075V11.5288" stroke="white" stroke-width="1.46628"/>
-                      </svg>                    
+                        <path
+                            d="M15.2132 0.472778H0.867258C0.818545 0.472778 0.778992 0.512505 0.778992 0.561513V14.3604C0.778992 14.4094 0.818545 14.4491 0.867258 14.4491H15.2132C15.2619 14.4491 15.3012 14.4094 15.3012 14.3604V0.561513C15.3012 0.512505 15.2619 0.472778 15.2132 0.472778Z"
+                            fill="#545BE8" />
+                        <path d="M4.61713 3.54858V11.3733" stroke="white" stroke-width="1.26926" />
+                        <path d="M6.96182 3.54858V7.44616" stroke="white" stroke-width="1.26685" />
+                        <path d="M8.74799 3.54883V4.8727H10.9854L12.6084 8.22643H14.0698L11.7488 3.54883H8.74799Z"
+                            fill="white" />
+                        <path d="M9.41281 6.3075V11.5288" stroke="white" stroke-width="1.46628" />
+                    </svg>
                     <a href="#">mangcoding Store</a>
                 </div>
                 <div class="list">
@@ -41,6 +44,100 @@
         </div>
 
     </section>
+    <main></main>
+    <footer>
+        <div class="contener">
+            <div class="row">
+                <div class="footer-left-side">
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 16 15" fill="none">
+                            <path
+                                d="M15.2132 0.472778H0.867258C0.818545 0.472778 0.778992 0.512505 0.778992 0.561513V14.3604C0.778992 14.4094 0.818545 14.4491 0.867258 14.4491H15.2132C15.2619 14.4491 15.3012 14.4094 15.3012 14.3604V0.561513C15.3012 0.512505 15.2619 0.472778 15.2132 0.472778Z"
+                                fill="#545BE8" />
+                            <path d="M4.61713 3.54858V11.3733" stroke="white" stroke-width="1.26926" />
+                            <path d="M6.96182 3.54858V7.44616" stroke="white" stroke-width="1.26685" />
+                            <path d="M8.74799 3.54883V4.8727H10.9854L12.6084 8.22643H14.0698L11.7488 3.54883H8.74799Z"
+                                fill="white" />
+                            <path d="M9.41281 6.3075V11.5288" stroke="white" stroke-width="1.46628" />
+                        </svg>
+                        <a href="#">mangcoding Store</a>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor,
+                        erat sapien faucibus lectus, vel tempor dolor augue et lectus.</p>
+                    <div class="social">  
+                          <svg xmlns="http://www.w3.org/2000/svg" width="9" height="6" viewBox="0 0 9 6" fill="none">
+                            <g clip-path="url(#clip0_0_153)">
+                              <path d="M8.10314 0.904628C7.82845 1.02179 7.5371 1.0987 7.23876 1.13279C7.54951 0.95346 7.78812 0.66949 7.90047 0.331142C7.60506 0.499926 7.28186 0.618844 6.94483 0.68276C6.67029 0.401162 6.27919 0.225174 5.84632 0.225174C5.01518 0.225174 4.34132 0.873949 4.34132 1.67413C4.34132 1.78771 4.35464 1.89829 4.38029 2.00437C3.12954 1.94392 2.02063 1.36707 1.27834 0.490412C1.14883 0.704417 1.07461 0.95335 1.07461 1.21886C1.07461 1.72158 1.34032 2.16507 1.74412 2.42493C1.50513 2.41772 1.2714 2.35557 1.06244 2.24367C1.06235 2.24974 1.06235 2.25581 1.06235 2.26191C1.06235 2.96396 1.5811 3.54961 2.26955 3.68273C2.04793 3.74076 1.81547 3.74925 1.58993 3.70756C1.78142 4.28322 2.33723 4.70213 2.99575 4.71385C2.4807 5.10247 1.83177 5.33413 1.12671 5.33413C1.00521 5.33413 0.88544 5.32726 0.7677 5.31388C1.43371 5.725 2.22476 5.96489 3.07464 5.96489C5.84282 5.96489 7.35653 3.75694 7.35653 1.84217C7.35653 1.77933 7.3551 1.71684 7.35217 1.65471C7.6468 1.44964 7.9011 1.19564 8.10314 0.904628Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_0_153">
+                                <rect width="7.41348" height="5.76604" fill="white" transform="translate(0.78067 0.202393)"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="8" height="7" viewBox="0 0 8 7" fill="none">
+                            <g clip-path="url(#clip0_0_158)">
+                              <path d="M2.42487 6.96803V2.79981H1.02694V6.96803H2.42487ZM1.72608 2.23037C2.21357 2.23037 2.517 1.9103 2.517 1.51032C2.50792 1.10132 2.21358 0.790131 1.73533 0.790131C1.25716 0.790131 0.944458 1.10132 0.944458 1.51032C0.944458 1.91032 1.24782 2.23037 1.71696 2.23037H1.72604H1.72608ZM3.19862 6.96803H4.59655V4.64029C4.59655 4.51572 4.60563 4.39127 4.64255 4.30222C4.74361 4.05331 4.97362 3.79552 5.35979 3.79552C5.86564 3.79552 6.06801 4.17776 6.06801 4.7381V6.968H7.46586V4.57798C7.46586 3.29767 6.77619 2.70195 5.85644 2.70195C5.10231 2.70195 4.7712 3.11972 4.58725 3.40425H4.59658V2.79973H3.19865C3.21699 3.19085 3.19865 6.96795 3.19865 6.96795L3.19862 6.96803Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_0_158">
+                                <rect width="6.58976" height="6.1779" fill="white" transform="translate(0.961731 0.79039)"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none">
+                            <g clip-path="url(#clip0_0_163)">
+                              <path d="M3.9753 2.42019C3.04963 2.42019 2.30299 3.16299 2.30299 4.08388C2.30299 5.00477 3.04963 5.74757 3.9753 5.74757C4.90096 5.74757 5.6476 5.00477 5.6476 4.08388C5.6476 3.16299 4.90096 2.42019 3.9753 2.42019ZM3.9753 5.16549C3.37711 5.16549 2.88808 4.68043 2.88808 4.08388C2.88808 3.48733 3.37565 3.00227 3.9753 3.00227C4.57494 3.00227 5.06251 3.48733 5.06251 4.08388C5.06251 4.68043 4.57348 5.16549 3.9753 5.16549ZM6.10606 2.35214C6.10606 2.56788 5.93141 2.74019 5.71601 2.74019C5.49914 2.74019 5.32595 2.56644 5.32595 2.35214C5.32595 2.13784 5.5006 1.96409 5.71601 1.96409C5.93141 1.96409 6.10606 2.13784 6.10606 2.35214ZM7.21366 2.74598C7.18891 2.22617 7.06957 1.76572 6.68679 1.38636C6.30546 1.007 5.84263 0.888269 5.32013 0.862206C4.78161 0.8318 3.16752 0.8318 2.62901 0.862206C2.10796 0.886821 1.64513 1.00555 1.26235 1.38491C0.879567 1.76428 0.761676 2.22472 0.735478 2.74453C0.704914 3.28027 0.704914 4.88604 0.735478 5.42178C0.760221 5.94159 0.879567 6.40204 1.26235 6.7814C1.64513 7.16076 2.10651 7.27949 2.62901 7.30555C3.16752 7.33596 4.78161 7.33596 5.32013 7.30555C5.84263 7.28094 6.30546 7.16221 6.68679 6.7814C7.06811 6.40204 7.18746 5.94159 7.21366 5.42178C7.24422 4.88604 7.24422 3.28172 7.21366 2.74598ZM6.51795 5.99661C6.40443 6.28041 6.18466 6.49905 5.89794 6.61344C5.46858 6.78285 4.44977 6.74375 3.9753 6.74375C3.50082 6.74375 2.48055 6.7814 2.05265 6.61344C1.76739 6.5005 1.54762 6.28186 1.43264 5.99661C1.26235 5.56947 1.30165 4.55591 1.30165 4.08388C1.30165 3.61185 1.2638 2.59684 1.43264 2.17115C1.54616 1.88735 1.76593 1.66871 2.05265 1.55432C2.48201 1.38491 3.50082 1.42401 3.9753 1.42401C4.44977 1.42401 5.47004 1.38636 5.89794 1.55432C6.1832 1.66726 6.40297 1.8859 6.51795 2.17115C6.68824 2.59829 6.64894 3.61185 6.64894 4.08388C6.64894 4.55591 6.68824 5.57092 6.51795 5.99661Z" fill="white"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_0_163">
+                                <rect width="6.58976" height="7.41348" fill="white" transform="translate(0.731049 0.378387)"/>
+                              </clipPath>
+                            </defs>
+                          </svg>
+                    </div>    
+
+                </div>
+                <div class="footer-right-side">
+                    <div class="item">
+                        <h2>Home</h2>
+                        <nav>
+                            <a href="#">Product</a>
+                            <a href="#">Course</a>
+                            <a href="#">About Us</a>
+                            <a href="#">Log in</a>
+                        </nav>
+                    </div>
+                    <div class="item">
+                        <h2>Course</h2>
+                        <nav>
+                            <a href="#">HTMK & CSS</a>
+                            <a href="#">Javascript</a>
+                            <a href="#">Fotographer</a>
+                            <a href="#">Desain Grafis</a>
+                        </nav>
+                    </div>
+                    <div class="item">
+                        <h2>Article</h2>
+                        <nav>
+                            <a href="#">New</a>
+                            <a href="#">Old</a>
+                            <a href="#">Trend</a>
+                            <a href="#">Popular</a>
+                        </nav>
+                    </div>
+                    <div class="item">
+                        <h2>Contact Us</h2>
+                        <nav>
+                            <a href="#">CCdoc123@gmail.com</a>
+                            
+                        </nav>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
